# abacus2deepmd

./: .gitignore  README.md  README_CN.md  demo.py  pyproject.toml  requirements.txt  setup.py
src/: __init__.py
src/abacus2deepmd/: main.py
src/abacus2deepmd/analysis/: __init__.py  power_parameter_tester.py  sampling_comparison_analyser.py  trajectory_analyser.py
src/abacus2deepmd/core/: __init__.py  analysis_orchestrator.py  metrics.py  sampler.py  scheduler.py  system_analyser.py
src/abacus2deepmd/io/: __init__.py  file_utils.py  path_manager.py  result_saver.py  stru_parser.py
src/abacus2deepmd/utils/: __init__.py  common.py  logmanager.py  progress.py
