[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abacus2deepmd"
version = "0.3.1"
description = "ABACUS molecular dynamics trajectory analysis tool with intelligent sampling and DeepMD data export"
authors = [
    {name = "LoveElysia1314", email = "love_elysia1314@outlook.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "dpdata"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.scripts]
abacus2deepmd = "abacus2deepmd.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
